typescript/checker/tests/conformance/parser/ecmascript5/Protected/Protected4.ts.stderr
error: Unexpected token Some(Word(m))
 --> $DIR/tests/conformance/parser/ecmascript5/Protected/Protected4.ts:2:20
  |
2 |   protected public m() { }
  |                    ^

